crates/ty_python_semantic/resources/mdtest/snapshots/basedpython_type_mod…_-_basedpython___`litera…_-_a_`Callable`_paramet…_(1d80f3ff7d077e34).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: basedpython_type_modifiers.md - basedpython: `literal` and `final` use-site type modifiers - a `Callable` parameter list is still python in a `.py` file
mdtest path: crates/ty_python_semantic/resources/mdtest/basedpython_type_modifiers.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import Callable
2 | 
3 | # error: [invalid-syntax]
4 | a: Callable[[literal str], None]
```

# Diagnostics

```
error[invalid-syntax]: the `literal` type modifier is not valid in .py files
 --> src/mdtest_snippet.py:4:14
  |
4 | a: Callable[[literal str], None]
  |              ^^^^^^^

```
